AC_INIT(src/hulda.c)
AM_INIT_AUTOMAKE(ke-recv-extra, 0.2)
AM_CONFIG_HEADER(config.h)
AC_PROG_CC

PKG_CHECK_MODULES(GIO, gio-2.0)
PKG_CHECK_MODULES(GCONF, gconf-2.0)
PKG_CHECK_MODULES(DBUSGLIB, dbus-glib-1)
PKG_CHECK_MODULES(DBUS, dbus-1)
PKG_CHECK_MODULES(GLIB, glib-2.0)
PKG_CHECK_MODULES(LIBOSSO, libosso)

AC_OUTPUT([Makefile src/Makefile])
